confik-macros/tests/trybuild/fail-crate-not-in-scope.stderr
error[E0433]: failed to resolve: use of undeclared crate or module `not_in_scope`
 --> tests/trybuild/fail-crate-not-in-scope.rs:2:18
  |
2 | #[confik(crate = not_in_scope)]
  |                  ^^^^^^^^^^^^ use of undeclared crate or module `not_in_scope`

error: cannot find attribute `serde` in this scope
 --> tests/trybuild/fail-crate-not-in-scope.rs:3:8
  |
3 | struct Config {}
  |        ^^^^^^
  |
  = note: `serde` is in scope, but it is a crate, not an attribute
